--- a/com.dynamo.cr.sceneed/plugin.xml
+++ b/com.dynamo.cr.sceneed/plugin.xml
@@ -4,7 +4,7 @@
    <extension
          point="org.eclipse.ui.editors">
       <editor
-            class="com.dynamo.cr.sceneed.NodeEditor"
+            class="com.dynamo.cr.sceneed.SceneEditor"
             default="false"
             extensions="go, sprite"
             id="com.dynamo.cr.sceneed.editor"
@@ -15,7 +15,7 @@
          point="org.eclipse.ui.menus">
       <menuContribution
             allPopups="false"
-            locationURI="popup:com.dynamo.cr.sceneed.menus.NodeOutlineContext">
+            locationURI="popup:com.dynamo.cr.sceneed.menus.sceneOutlineContext">
          <command
                commandId="com.dynamo.cr.sceneed.commands.add"
                label="Add Component"
@@ -35,17 +35,6 @@
                   checkEnabled="false">
                <reference
                      definitionId="com.dynamo.cr.sceneed.definitions.gameObjectSelected">
-               </reference>
-            </visibleWhen>
-         </command>
-         <command
-               commandId="com.dynamo.cr.sceneed.commands.add"
-               label="Add Animation"
-               style="push">
-            <visibleWhen
-                  checkEnabled="false">
-               <reference
-                     definitionId="com.dynamo.cr.sceneed.definitions.spriteSelected">
                </reference>
             </visibleWhen>
          </command>
@@ -90,35 +79,12 @@
       <menuContribution
             allPopups="false"
             locationURI="menu:org.eclipse.ui.main.menu?after=edit">
-         <menu
-               label="Sprite">
-            <command
-                  commandId="com.dynamo.cr.sceneed.commands.add"
-                  label="Add Animation"
-                  style="push">
-            </command>
-            <visibleWhen
-                  checkEnabled="false">
-               <or>
-                  <reference
-                        definitionId="com.dynamo.cr.sceneed.definitions.spriteSelected">
-                  </reference>
-                  <reference
-                        definitionId="com.dynamo.cr.sceneed.definitions.animationSelected">
-                  </reference>
-               </or>
-            </visibleWhen>
-         </menu>
-      </menuContribution>
-      <menuContribution
-            allPopups="false"
-            locationURI="menu:org.eclipse.ui.main.menu?after=edit">
       </menuContribution>
    </extension>
    <extension
          point="org.eclipse.ui.contexts">
       <context
-            id="com.dynamo.cr.sceneed.contexts.nodeEditor"
+            id="com.dynamo.cr.sceneed.contexts.sceneEditor"
             name="Scene Editor">
       </context>
    </extension>
@@ -159,24 +125,6 @@
          </activeWhen>
       </handler>
       <handler
-            class="com.dynamo.cr.sceneed.sprite.AddAnimationHandler"
-            commandId="com.dynamo.cr.sceneed.commands.add">
-         <activeWhen>
-            <reference
-                  definitionId="com.dynamo.cr.sceneed.definitions.spriteSelected">
-            </reference>
-         </activeWhen>
-      </handler>
-      <handler
-            class="com.dynamo.cr.sceneed.sprite.RemoveAnimationHandler"
-            commandId="org.eclipse.ui.edit.delete">
-         <activeWhen>
-            <reference
-                  definitionId="com.dynamo.cr.sceneed.definitions.animationSelected">
-            </reference>
-         </activeWhen>
-      </handler>
-      <handler
             class="com.dynamo.cr.sceneed.gameobject.AddComponentFromFileHandler"
             commandId="com.dynamo.cr.sceneed.commands.addLink">
          <activeWhen>
@@ -195,13 +143,13 @@
          point="org.eclipse.ui.bindings">
       <key
             commandId="com.dynamo.cr.sceneed.commands.add"
-            contextId="com.dynamo.cr.sceneed.contexts.nodeEditor"
+            contextId="com.dynamo.cr.sceneed.contexts.sceneEditor"
             schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
             sequence="I">
       </key>
       <key
             commandId="com.dynamo.cr.sceneed.commands.addLink"
-            contextId="com.dynamo.cr.sceneed.contexts.nodeEditor"
+            contextId="com.dynamo.cr.sceneed.contexts.sceneEditor"
             schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
             sequence="O">
       </key>
@@ -228,30 +176,6 @@
                   operator="or">
                <instanceof
                      value="com.dynamo.cr.sceneed.gameobject.ComponentNode">
-               </instanceof>
-            </iterate>
-         </with>
-      </definition>
-      <definition
-            id="com.dynamo.cr.sceneed.definitions.spriteSelected">
-         <with
-               variable="selection">
-            <iterate
-                  operator="or">
-               <instanceof
-                     value="com.dynamo.cr.sceneed.sprite.SpriteNode">
-               </instanceof>
-            </iterate>
-         </with>
-      </definition>
-      <definition
-            id="com.dynamo.cr.sceneed.definitions.animationSelected">
-         <with
-               variable="selection">
-            <iterate
-                  operator="or">
-               <instanceof
-                     value="com.dynamo.cr.sceneed.sprite.AnimationNode">
                </instanceof>
             </iterate>
          </with>
