Removed old game object editor. case 291

--- a/com.dynamo.cr.sceneed/plugin.xml
+++ b/com.dynamo.cr.sceneed/plugin.xml
@@ -7,6 +7,7 @@
             class="com.dynamo.cr.sceneed.SceneEditor"
             default="false"
             extensions="go, sprite"
+            icon="icons/brick.png"
             id="com.dynamo.cr.sceneed.editor"
             name="Scene Editor">
       </editor>
