--- a/com.dynamo.cr.sceneed.ui/plugin.xml
+++ b/com.dynamo.cr.sceneed.ui/plugin.xml
@@ -275,5 +275,20 @@
             resource-type="com.dynamo.cr.tileeditor.resourcetypes.TileGrid">
       </node-type>
    </extension>
+   <extension
+         point="org.eclipse.ui.preferencePages">
+      <page
+            category="com.dynamo.rclient.preferences.PreferencePage"
+            class="com.dynamo.cr.sceneed.ui.preferences.PreferencePage"
+            id="com.dynamo.cr.sceneed.ui.preferences.preferencePage"
+            name="Scene Editor">
+      </page>
+   </extension>
+   <extension
+         point="org.eclipse.core.runtime.preferences">
+      <initializer
+            class="com.dynamo.cr.sceneed.ui.preferences.PreferenceInitializer">
+      </initializer>
+   </extension>
 
 </plugin>
