Lua editor refactoring for multi-line support. case 293 * Single line comment works as expected. Only the content after -- as highlighted * Multi-line comment support ( --[[ --]] ) * Partitioning is now setup using extension point. No need   for explicit document provider now. Didn't work before as   we used used FileDocumentProvider instead   of TextFileDocumentProvider. The latter is required for   EFS * LuaScanner only scans for keywords now. Comments is   handled in the partitioning

--- a/com.dynamo.cr.luaeditor/plugin.xml
+++ b/com.dynamo.cr.luaeditor/plugin.xml
@@ -64,5 +64,12 @@
             type-class="render_script">
       </resource-type>
    </extension>
+   <extension
+         point="org.eclipse.core.filebuffers.documentSetup">
+      <participant
+            class="com.dynamo.cr.luaeditor.LuaDocumentSetupParticipant"
+            extensions="lua,script,gui_script,render_script">
+      </participant>
+   </extension>
 
 </plugin>
