--- a/com.dynamo.cr.sceneed.core.test/plugin.xml
+++ b/com.dynamo.cr.sceneed.core.test/plugin.xml
@@ -18,12 +18,12 @@
          point="com.dynamo.cr.nodetypes">
       <node-type
             node="com.dynamo.cr.sceneed.core.test.ParentNode"
-            presenter="com.dynamo.cr.sceneed.core.test.ParentPresenter"
+            loader="com.dynamo.cr.sceneed.core.test.ParentLoader"
             resource-type="com.dynamo.cr.sceneed.core.test.parent">
       </node-type>
       <node-type
             node="com.dynamo.cr.sceneed.core.test.ChildNode"
-            presenter="com.dynamo.cr.sceneed.core.test.ChildPresenter"
+            loader="com.dynamo.cr.sceneed.core.test.ChildLoader"
             resource-type="com.dynamo.cr.sceneed.core.test.child">
       </node-type>
    </extension>
