--- a/com.dynamo.cr.ddfeditor/plugin.xml
+++ b/com.dynamo.cr.ddfeditor/plugin.xml
@@ -31,22 +31,22 @@
             name="Light Editor">
       </editor>
       <editor
-            class="com.dynamo.cr.ddfeditor.SpawnPointEditor"
-            contributorClass="com.dynamo.cr.ddfeditor.DdfEditorActionBarContributor"
+            class="com.dynamo.cr.sceneed.ui.SceneEditor"
+            contributorClass="com.dynamo.cr.editor.ui.DefoldEditorActionBarContributor"
             default="false"
             extensions="spawnpoint"
-            icon="icons/table_multiple.png"
-            id="com.dynamo.cr.ddfeditor.spawnpointeditor"
-            name="Spawn Point Editor">
+            icon="icons/lightning.png"
+            id="com.dynamo.cr.ddfeditor.spawnPointEditor"
+            name="Scene Editor">
       </editor>
       <editor
-            class="com.dynamo.cr.ddfeditor.CollisionObjectEditor"
-            contributorClass="com.dynamo.cr.ddfeditor.DdfEditorActionBarContributor"
+            class="com.dynamo.cr.sceneed.ui.SceneEditor"
+            contributorClass="com.dynamo.cr.editor.ui.DefoldEditorActionBarContributor"
             default="false"
             extensions="collisionobject"
             icon="icons/weight.png"
-            id="com.dynamo.cr.ddfeditor.collisionobjecteditor"
-            name="Collision Object Editor">
+            id="com.dynamo.cr.ddfeditor.collisionObjectEditor"
+            name="Scene Editor">
       </editor>
       <editor
             class="com.dynamo.cr.ddfeditor.FontEditor"
@@ -107,9 +107,18 @@
             contributorClass="com.dynamo.cr.ddfeditor.DdfEditorActionBarContributor"
             default="false"
             extensions="convexshape"
-            icon="icons/contrast_high.png"
+            icon="icons/draw_ellipse.png"
             id="com.dynamo.cr.ddfeditor.convexshapeeditor"
             name="Convex Shape Editor">
+      </editor>
+      <editor
+            class="com.dynamo.cr.sceneed.ui.SceneEditor"
+            contributorClass="com.dynamo.cr.editor.ui.DefoldEditorActionBarContributor"
+            default="false"
+            extensions="collectionproxy"
+            icon="icons/bricks_flash.png"
+            id="com.dynamo.cr.ddfeditor.collectionProxyEditor"
+            name="Scene Editor">
       </editor>
    </extension>
    <extension
