--- a/com.dynamo.cr.go.ui/plugin.xml
+++ b/com.dynamo.cr.go.ui/plugin.xml
@@ -139,7 +139,7 @@
       <wizard
             category="com.dynamo.cr.editor.wizardCategory"
             class="com.dynamo.cr.go.ui.wizards.SpriteNewWizard"
-            icon="icons/penguin.png"
+            icon="icons/pictures.png"
             id="com.dynamo.cr.go.ui.wizards.spriteNewWizard"
             name="Sprite File">
       </wizard>
