--- a/com.dynamo.cr.ddfeditor/plugin.xml
+++ b/com.dynamo.cr.ddfeditor/plugin.xml
@@ -500,6 +500,21 @@
             name="Mesh"
             type-class="mesh">
       </resource-type>
+      <resource-type
+            embeddable="true"
+            file-extension="sprite"
+            id="com.dynamo.cr.ddfeditor.resourcetypes.sprite"
+            name="Sprite"
+            proto-message-class="com.dynamo.sprite.proto.Sprite$SpriteDesc"
+            resource-refactor-participant-class="com.dynamo.cr.ddfeditor.refactoring.SpriteRefactorParticipant"
+            template-data="texture: &apos;&apos; width: 1 height: 1"
+            type-class="component">
+         <references>
+            <reference-type-class
+                  type-class="image">
+            </reference-type-class>
+         </references>
+      </resource-type>
     </extension>
    <extension
          point="org.eclipse.ui.perspectiveExtensions">
@@ -590,6 +605,11 @@
             loader="com.dynamo.cr.ddfeditor.scene.ConvexShapeLoader"
             node="com.dynamo.cr.ddfeditor.scene.ConvexShapeNode"
             resource-type="com.dynamo.cr.ddfeditor.resourcetypes.ConvexShape">
+      </node-type>
+      <node-type
+            loader="com.dynamo.cr.ddfeditor.scene.SpriteLoader"
+            node="com.dynamo.cr.ddfeditor.scene.SpriteNode"
+            resource-type="com.dynamo.cr.ddfeditor.resourcetypes.sprite">
       </node-type>
    </extension>
 
